--- a/src/hotstar.css
+++ b/src/hotstar.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url("https://pro.fontawesome.com/releases/v5.10.0/css/all.css");
 *{
     box-sizing:border-box;
     padding:0;
