added firebase service

--- a/src/HotStarComponents/HeaderComponent/HeaderStyles.css
+++ b/src/HotStarComponents/HeaderComponent/HeaderStyles.css
@@ -40,7 +40,7 @@
     text-transform: uppercase;
 }
 
-.nav-item input {
+.navbar-nav .nav-item input {
     background: rgb(0 0 0 / 0%);
     border:none;
     border-bottom: 1px solid rgb(204 204 204);
@@ -48,7 +48,7 @@
     width:250px;
     padding: 0;
 }
-.from-controle::placeholder {
+.navbar-nav .from-controle::placeholder {
     color: #fff !important;
     text-transform:capitalize;
     padding:0 !important;
@@ -66,7 +66,7 @@
     letter-spacing:1px;
 }
 
-.from-controle:focus {
+.navbar-nav .from-controle:focus {
     background: transparent !important;
     width: 350px;
     border-bottom:1px solid royalblue;
