added react-toastify and email verification and update profile

--- a/src/HotStarComponents/AuthComponent/Auth-Styles.css
+++ b/src/HotStarComponents/AuthComponent/Auth-Styles.css
@@ -1,6 +1,38 @@
- .loginBlock {
+ .authBlock {
      display: flex;
      align-items:center;
      justify-content: center;
      height: 100vh;
  }
+
+ .card {
+     background: linear-gradient(to bottom, rgb(25 33 51), rgb(17 24 38));
+     box-shadow: 1px 3px 4px 1px #272935;
+     color: rgb(255 255 255);
+ }
+
+.authBlock h5 {
+    padding-bottom: 0 !important;
+}
+
+.authBlock .btn-outline-primary {
+    color: rgb(31 128 224);
+    border-color: rgb(31 128 224);
+}
+
+.authBlock input{
+    background: rgb(0 0 0 / 0%) !important;
+    border:1px solid rgb(73 80 87) !important;
+}
+
+.authBlock .btn-outline-primary:hover {
+    color: #fff;
+    background: rgb(31 128 224);
+}
+
+.authBlock .from-group span a {
+    padding:3px 11px;
+    font-weight:bold;
+    border: 1px solid rgb(31 128 224);
+    border-radius:2px;
+}
