--- a/src/hotstar.css
+++ b/src/hotstar.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: #efefef;
+    background: linear-gradient(to bottom,rgb(20 27 41), rgb(12 17 27) 300px);
     font-family: "Roboto", "Helveticanenu-Light", sans-serif;
     font-size:14px;
 }
