added login and phonenumber and header and addmovie and listmovie and listmovies

--- a/src/HotStarComponents/HeaderComponent/HeaderStyles.css
+++ b/src/HotStarComponents/HeaderComponent/HeaderStyles.css
@@ -73,3 +73,34 @@
     box-shadow:none;
     transition: ease-in-out 0.5s all;
 } 
+
+.navbar-nav.ml-auto img {
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+  }
+  
+  .dropdownMenu {
+    display: none;
+    list-style: none;
+    background: rgb(103 58 183);
+    position: absolute;
+    top: 57px;
+    width: 166px;
+    left: -106px;
+    padding: 10px;
+    border-radius: 2px;
+    z-index: 1;
+  }
+  
+  .dropdownMenu a {
+    color: #fff;
+  }
+  
+  .profile_block {
+    position: relative;
+  }
+  
+  .profile_block:hover .dropdownMenu {
+    display: block;
+  }
